--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,5 @@
     body{
-    background-image: url("photo/eviota.png");
+    background-image: url("photo/bg-home.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }   
