--- a/services-style.css
+++ b/services-style.css
@@ -1,5 +1,5 @@
     body{
-    background-image: url("photo/bg-services.jpg");
+    background-image: url( "photo/bg-service.jpg ");
     background-repeat: no-repeat;
     background-size: cover;
 }   
