--- a/testimony-style.css
+++ b/testimony-style.css
@@ -1,5 +1,5 @@
     body{
-    background-image: url("photo/bg-testimony.png");
+    background-image: url("photo/bg-testimony.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }   
